
    - divmod (a,0,1) = 0, to match MPU, Pari, and Math::BigInt.
      divmod (a,1,n) = a mod n.  It was returning 0 in some cases.

    - zeta could round the last digit wrong in rare cases.

    - lucas_sequence did not always match modded lucasu and lucasv.
      Removed some unnecessary restrictions on P and Q.
      Qk=powmod(Q,k,n) wasn't true for k=0.  Fixed.

    [PERFORMANCE]

    - The first 100 Bernoulli numbers are cached, and more will be cached
      by bernvec or faulhaber_sum.

    - Add faster factorialmod code.  5-10x faster for large inputs.


0.52 2020-06-22

    [ADDED]

    - powint(a,b)             integer a^b
    - mulint(a,b)             integer a*b
    - addint(a,b)             integer a+b
    - subint(a,b)             integer a-b
    - divint(a,b)             integer a/b quotient  (floor)
    - modint(a,b)             integer a/b modulo    (floor)
    - divrem(a,b)             integer a/b quo + rem (Euclidian)
    - tdivrem(a,b)            integer a/b quo + rem (truncated)
    - absint(n)               integer absolute value
    - negint(n)               integer negate: returns -n
    - is_gaussian_prime(a,b)  is a+bi a Gaussian prime
    - random_safe_prime(b)    random b-bit safe prob prime
    - next_twin_prime(n)      returns start of twin prime > n

    [FIXES]

    - Remove a mod in the AKS test that was in code since 2012.

    - squfof126 was not portable. GMP 6.2.0 changed to lazy allocation
      causing the code to fail.  Rewrote function to be more portable.

    - is_totient for powers of 2 was returning 0.  Thanks Trizen.

    - LambertW could fault if given inputs very near the branch point.

    [PERFORMANCE]

    - Trizen suggested binary splitting LCM.  Much faster for big lists.

    - Trizen improved speed of lucas sequence for large n and even modulus.

    - todigits uses a subquadratic algorithm.  Thanks to Trizen for request.

    - sieving depth for large sizes wasn't optimal on 32-bit machines.